--- a/posts/.vuepress/public/admin/config.yml
+++ b/posts/.vuepress/public/admin/config.yml
@@ -10,6 +10,7 @@ collections:
     folder: 'posts' # The path to the folder where the documents are stored
     create: true # Allow users to create new documents in this collection
     slug: '{{slug}}' # Filename template, e.g., YYYY-MM-DD-title.md
+    preview_path: /{{slug}}
     fields: # The fields for each document, usually in front matter
       - { label: 'Layout', name: 'layout', widget: 'hidden', default: 'blog' }
       - { label: 'Title', name: 'title', widget: 'string' }
