--- a/posts/.vuepress/public/admin/config.yml
+++ b/posts/.vuepress/public/admin/config.yml
@@ -11,6 +11,7 @@ collections:
     create: true # Allow users to create new documents in this collection
     slug: '{{slug}}' # Filename template, e.g., YYYY-MM-DD-title.md
     preview_path: /{{slug}}
+    filter: { field: 'layout', value: 'blog' }
     fields: # The fields for each document, usually in front matter
       - { label: 'Layout', name: 'layout', widget: 'hidden', default: 'blog' }
       - { label: 'Title', name: 'title', widget: 'string' }
